--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "il2missionplanner.com",
+  "name": "19giap.com",
   "homepage": "https://github.com/gavincabbage/19giap.com",
   "authors": [
     "Gavin Cabbage <gavincabbage@gmail.com>"
@@ -9,6 +9,5 @@
   "moduleType": [],
   "license": "MIT",
   "dependencies": {
-    "validatinator": "^1.3.3"
   }
 }
