--- a/package.json
+++ b/package.json
@@ -35,19 +35,18 @@
     "browserify": "browserify -t brfs app/js/index.js -o dist/index.tmp.js",
     "browserify:dev": "browserify -t brfs app/js/index.js -o dist/index.js -d",
     "copy:vendor": "cp -R app/vendor dist/vendor",
-    "copy:img": "mkdir -p dist/img; cp app/img/dist/* dist/img/",
+    "copy:img": "mkdir -p dist/img; cp app/img/* dist/img/",
     "copy:html": "cp app/index.html dist/index.html",
-    "copy": "mkdir -p dist && npm run copy:vendor && npm run copy:img && npm run copy:html",
+    "copy": "mkdir -p dist && npm run copy:vendor && npm run copy:html",
     "dist:js:dev": "npm run lint && npm test && npm run browserify:dev",
     "dist:js": "npm run lint && npm test && npm run browserify && npm run uglify",
-    "dist:dev": "npm run copy && npm run dist:js:dev && npm run dist:css",
-    "dist": "npm run copy && npm run dist:js && npm run dist:css",
+    "dist:dev": "npm run copy && npm run dist:js:dev && npm run dist:css && npm run copy:img",
+    "dist": "npm run copy && npm run dist:js && npm run dist:css && npm run copy:img",
     "watch:css": "watch-run -p 'app/css/**/*.css' npm run dist:css",
     "watch:index": "watch-run -p 'app/index.html' npm run copy:html",
     "watch:js": "watch-run -p 'app/js/**/*.js' npm run dist:js:dev",
-    "watch:html": "watch-run -p 'app/html/**/*.html' npm run dist:js:dev",
-    "watch:img": "watch-run -p 'app/img/dist/*' npm run copy:img",
-    "develop": "npm run clean && npm run dist:dev && concurrently \"npm run watch:css\" \"npm run watch:index\" \"npm run watch:js\"  \"npm run watch:html\" \"npm run watch:img\" \"npm run reload\"",
+    "watch:img": "watch-run -p 'app/img/*' npm run copy:img",
+    "develop": "npm run clean && npm run dist:dev && concurrently \"npm run watch:css\" \"npm run watch:index\" \"npm run watch:js\" \"npm run watch:img\" \"npm run reload\"",
     "dist:css": "cleancss -o dist/index.css app/css/index.css",
     "nodist": "npm run lint && npm test",
     "reload": "livereload ./dist/"
