first commit with firebase

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "watch:index": "watch-run -p 'app/index.html' npm run copy:html",
     "watch:js": "watch-run -p 'app/js/**/*.js' npm run dist:js:dev",
     "watch:img": "watch-run -p 'app/img/*' npm run copy:img",
-    "develop": "npm run clean && npm run dist:dev && concurrently \"npm run watch:css\" \"npm run watch:index\" \"npm run watch:js\" \"npm run watch:img\" \"npm run reload\"",
+    "develop": "npm run clean && npm run dist:dev && concurrently \"npm run watch:css\" \"npm run watch:index\" \"npm run watch:js\" \"npm run watch:img\" \"npm run reload\" \"firebase serve\"",
     "dist:css": "cleancss -o dist/index.css app/css/index.css",
     "nodist": "npm run lint && npm test",
     "reload": "livereload ./dist/"
