--- a/.jshintrc
+++ b/.jshintrc
@@ -8,6 +8,7 @@
     "undef": true,
     "multistr": true,
     "globals": {
-        "console": true
+        "console": true,
+        "firebase": true
     }
 }
