--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
     "dist:js": "npm run lint && npm test && npm run browserify && npm run uglify",
     "dist:dev": "npm run copy && npm run dist:js:dev && npm run dist:css && npm run copy:img",
     "dist": "npm run copy && npm run dist:js && npm run dist:css && npm run copy:img",
-    "watch:css": "watch-run -p 'app/scss/**/*.scss' npm run dist:css",
+    "watch:scss": "watch-run -p 'app/scss/**/*.scss' npm run dist:css",
     "watch:index": "watch-run -p 'app/index.html' npm run copy:html",
     "watch:js": "watch-run -p 'app/js/**/*.js' npm run dist:js:dev",
     "watch:img": "watch-run -p 'app/img/*' npm run copy:img",
-    "develop": "npm run clean && npm run dist:dev && concurrently \"npm run watch:css\" \"npm run watch:index\" \"npm run watch:js\" \"npm run watch:img\" \"npm run reload\" \"firebase serve\"",
-    "dist:css": "sass app/css/index.scss dist/index.css",
+    "develop": "npm run clean && npm run dist:dev && concurrently \"npm run watch:scss\" \"npm run watch:index\" \"npm run watch:js\" \"npm run watch:img\" \"npm run reload\" \"firebase serve\"",
+    "dist:css": "sass app/scss/index.scss dist/index.css",
     "nodist": "npm run lint && npm test",
     "reload": "livereload ./dist/"
   },
