moved to all bower deps and libsass

--- a/bower.json
+++ b/bower.json
@@ -9,5 +9,7 @@
   "moduleType": [],
   "license": "MIT",
   "dependencies": {
+    "navigo": "^3.0.0",
+    "skeleton": "skeleton-css#^2.0.4"
   }
 }
