--- a/package.json
+++ b/package.json
@@ -34,10 +34,9 @@
     "clean": "rm -rf dist",
     "browserify": "browserify -t brfs app/js/index.js -o dist/index.tmp.js",
     "browserify:dev": "browserify -t brfs app/js/index.js -o dist/index.js -d",
-    "copy:vendor": "cp -R app/vendor dist/vendor",
     "copy:img": "mkdir -p dist/img; cp app/img/* dist/img/",
     "copy:html": "cp app/index.html dist/index.html",
-    "copy": "mkdir -p dist && npm run copy:vendor && npm run copy:html",
+    "copy": "mkdir -p dist && npm run copy:html",
     "dist:js:dev": "npm run lint && npm test && npm run browserify:dev",
     "dist:js": "npm run lint && npm test && npm run browserify && npm run uglify",
     "dist:dev": "npm run copy && npm run dist:js:dev && npm run dist:css && npm run copy:img",
@@ -47,7 +46,7 @@
     "watch:js": "watch-run -p 'app/js/**/*.js' npm run dist:js:dev",
     "watch:img": "watch-run -p 'app/img/*' npm run copy:img",
     "develop": "npm run clean && npm run dist:dev && concurrently \"npm run watch:scss\" \"npm run watch:index\" \"npm run watch:js\" \"npm run watch:img\" \"npm run reload\" \"firebase serve\"",
-    "dist:css": "sass app/scss/index.scss dist/index.css",
+    "dist:css": "node-sass --output-style compressed app/scss/index.scss > dist/index.css",
     "nodist": "npm run lint && npm test",
     "reload": "livereload ./dist/"
   },
