--- a/.jshintrc
+++ b/.jshintrc
@@ -13,6 +13,7 @@
         "document": true,
         "require": true,
         "module": true,
-        "mockElement": true
+        "mockElement": true,
+        "Path": true
     }
 }
