--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,23 @@
 {
-  "name": "19giap.com",
-  "homepage": "https://github.com/gavincabbage/19giap.com",
+  "name": "polymer-starter-kit",
   "authors": [
-    "Gavin Cabbage <gavincabbage@gmail.com>"
+    "The Polymer Authors"
   ],
-  "description": "19th Guards Fighter Aviation Regiment Website",
-  "main": "index.html",
-  "moduleType": [],
-  "license": "MIT",
+  "private": true,
   "dependencies": {
-    "skeleton": "^2.0.4"
+    "app-layout": "PolymerElements/app-layout#^0.10.0",
+    "app-route": "PolymerElements/app-route#^0.9.0",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
+    "iron-icon": "PolymerElements/iron-icon#^1.0.0",
+    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.0.0",
+    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.0",
+    "iron-media-query": "PolymerElements/iron-media-query#^1.0.0",
+    "iron-pages": "PolymerElements/iron-pages#^1.0.0",
+    "iron-selector": "PolymerElements/iron-selector#^1.0.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
+    "polymer": "Polymer/polymer#^1.6.0"
+  },
+  "devDependencies": {
+    "web-component-tester": "^4.0.0"
   }
 }
