--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "polymer-starter-kit",
+  "name": "19giap.com",
   "authors": [
-    "The Polymer Authors"
+    "Gavin Cabbage"
   ],
   "private": true,
   "dependencies": {
@@ -15,7 +15,12 @@
     "iron-pages": "PolymerElements/iron-pages#^1.0.0",
     "iron-selector": "PolymerElements/iron-selector#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
-    "polymer": "Polymer/polymer#^1.6.0"
+    "polymer": "Polymer/polymer#^1.6.0",
+    "iron-icons": "^1.2.0",
+    "polymerfire": "^0.10.3",
+    "gold-email-input": "PolymerElements/gold-email-input#^1.0.8",
+    "paper-input": "PolymerElements/paper-input#^1.1.22",
+    "paper-button": "PolymerElements/paper-button#^1.0.14"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
