--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,7 @@
         "rules": "database.rules.json"
     },
     "hosting": {
-        "public": "dist",
+        "public": "build/unbundled",
         "rewrites": [
             {
                 "source": "**",
