actually done for the day

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "19th Guards Fighter Aviation Division",
+  "name": "19th Guards Fighter Aviation Regiment",
   "short_name": "19giap.com",
   "start_url": "index.html/?homescreen=1",
   "display": "standalone",
