--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,9 @@
     "polymerfire": "^0.10.3",
     "gold-email-input": "PolymerElements/gold-email-input#^1.0.8",
     "paper-input": "PolymerElements/paper-input#^1.1.22",
-    "paper-button": "PolymerElements/paper-button#^1.0.14"
+    "paper-button": "PolymerElements/paper-button#^1.0.14",
+    "iron-elements": "^1.0.10",
+    "paper-elements": "^1.0.7"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
