--- a/bower.json
+++ b/bower.json
@@ -17,12 +17,12 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
     "polymer": "Polymer/polymer#^1.6.0",
     "iron-icons": "^1.2.0",
-    "polymerfire": "^0.10.3",
     "gold-email-input": "PolymerElements/gold-email-input#^1.0.8",
     "paper-input": "PolymerElements/paper-input#^1.1.22",
     "paper-button": "PolymerElements/paper-button#^1.0.14",
     "iron-elements": "^1.0.10",
-    "paper-elements": "^1.0.7"
+    "paper-elements": "^1.0.7",
+    "polymerfire": "locomuco/polymerfire#polymerfire-storage-api"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
