--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "19giap.com",
   "start_url": "index.html/?homescreen=1",
   "display": "standalone",
-  "theme_color": "#3f51b5",
-  "background_color": "#3f51b5",
+  "theme_color": "#9A070B",
+  "background_color": "#9A070B",
   "icons": [
     {
       "src": "images/manifest/icon-192x192.png",
